--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/9b342ce525.js" crossorigin="anonymous"></script>
-    <title>Most Of Memorable Object | MOMO</title>
+    <title>MOMO | Contemporary Style Archive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
